add archive version

--- a/conf.yaml
+++ b/conf.yaml
@@ -1,3 +1,6 @@
 amazon_es_host: 'https://search-amazon-es-workshop-k7qngzh4pj5pggc3nefrqfqlhe.ap-northeast-2.es.amazonaws.com/'
 user_id : admin
 password : adminPassW0rd!
+index : aws-blog
+archive_file_name : blog-articles.txt
+archive_file_name_ko : blog-articles-ko.txt
